# iamgroot

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  x.sh
api/: eth.json  input.openrpc  starknet_api_openrpc.json  starknet_query_api_openrpc.json  starknet_trace_api_openrpc.json  starknet_write_api.json
api/0.6.0/: starknet_trace_api_openrpc.json
api/eth/: ethereum.json
api/eth/block/: 0x10165f5.json
api/test/: source.openrpc
examples/: demo.rs  demo.txt  eth.rs  gen.rs  gen.txt  proxy.rs  proxy.txt  server.rs  server.txt  val.rs
src/: binding.rs  cache.rs  codegen.rs  jsonrpc.rs  lib.rs  main.rs  openrpc.rs  renders.rs  tests.rs
