[package]
name = "iamgroot"
version = "0.2.8"
edition = "2021"
description = "Rust code generation from Open-RPC spec"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17.1"
regex = "1.7.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.60"

[dev-dependencies]
async-trait = "0.1.77"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
pretty_assertions = "1.4.0"
axum = "0.7.4"
ureq = { version = "2.9.6", features = ["json"] }
